# RNG

./: CMakeLists.txt
src/: CMakeLists.txt  Kernel.cu  Kernel.h  RNG.h  Random.h  RandomNumberGeneration.cpp  RandomState.h  Shared.hh
src/cuda/: Allocator.cpp  Allocator.h
